--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             winter camp experience in the hills of Munnar.</p>
         </div>
 
+
         <div class="btn-group">
           <button class="action-btn primary book-trigger">Register Now</button>
           <a href="/src/assets/Equinox Brochure.pdf" download="Equinox_Brochure_2025.pdf" class="action-btn"
@@ -207,8 +208,8 @@
           <div>
             <h3>Bonus Value</h3>
             <ul style="margin-left: 1.5rem; color: var(--text-light)">
-              <li>Exposure to real industry tech</li>
-              <li>Academic points/certifications</li>
+              <li>Upto 32 Activity Points</li>
+              <li>Hands-on Training</li>
               <li>Collaboration with IEEE branches</li>
               <li>Future advanced training path</li>
             </ul>
@@ -216,10 +217,30 @@
           <div>
             <h3>Contact</h3>
             <p><strong>Phone:</strong> 8891212539</p>
-            <p><strong>web:</strong> phiscape.com</p>
             <p><strong>Org:</strong> Phiscape Robotics Pvt. Ltd.</p>
+            <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+              <a href="https://www.instagram.com/phi.scape/?hl=en" target="_blank"
+                style="color: var(--accent-primary); text-decoration: none; border-bottom: 1px dashed var(--accent-primary);">Instagram</a>
+              <a href="https://in.linkedin.com/company/phiscape" target="_blank"
+                style="color: var(--accent-primary); text-decoration: none; border-bottom: 1px dashed var(--accent-primary);">LinkedIn</a>
+            </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <!-- LOCATION -->
+    <section id="location" class="map-section">
+      <div class="container glass-panel">
+        <h2>Location</h2>
+        <div class="map-wrapper">
+          <iframe
+            src="https://maps.google.com/maps?q=College%20of%20Engineering%20Munnar&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <p style="margin-top: 1rem; text-align: center; color: var(--text-light);">
+          College of Engineering Munnar, PB No 70, Munnar, Kerala 685612
+        </p>
       </div>
     </section>
 
