--- a/index.html
+++ b/index.html
@@ -34,6 +34,25 @@
         </div>
 
 
+        <div id="countdown-container">
+          <div class="countdown-item">
+            <span id="days">00</span>
+            <span class="label">Days</span>
+          </div>
+          <div class="countdown-item">
+            <span id="hours">00</span>
+            <span class="label">Hours</span>
+          </div>
+          <div class="countdown-item">
+            <span id="minutes">00</span>
+            <span class="label">Minutes</span>
+          </div>
+          <div class="countdown-item">
+            <span id="seconds">00</span>
+            <span class="label">Seconds</span>
+          </div>
+        </div>
+
         <div class="btn-group">
           <button class="action-btn primary book-trigger">Register Now</button>
           <a href="/src/assets/Equinox Brochure.pdf" download="Equinox_Brochure_2025.pdf" class="action-btn"
@@ -53,8 +72,8 @@
             <br>
             <h3 style="color: var(--accent-secondary)">1-Week Hybrid Format</h3>
             <ul style="list-style: none; margin-left: 0.5rem;">
-              <li>💻 <strong>3 Days Online</strong> (Technical Foundation)</li>
-              <li>🏕️ <strong>2 Days Offline</strong> (Munnar Camp Experience)</li>
+              <li><strong>3 Days Online</strong> (Technical Foundation)</li>
+              <li><strong>2 Days Offline</strong> (Munnar Camp Experience)</li>
             </ul>
           </div>
           <div class="img-box">
@@ -172,12 +191,12 @@
             <div class="time-slot"><span>10:30 AM</span><span>Opening Session</span></div>
             <div class="time-slot"><span>11:00 AM</span><span>Technical Sessions</span></div>
             <div class="time-slot"><span>06:00 PM</span><span>Games & Activities</span></div>
-            <div class="time-slot"><span>08:00 PM</span><span>Campfire & Live Band 🎸</span></div>
+            <div class="time-slot"><span>08:00 PM</span><span>Campfire & Live Band</span></div>
           </div>
           <div>
             <h3 style="color: var(--accent-warm)">DAY 2</h3>
             <div class="time-slot"><span>05:30 AM</span><span>Wake Up</span></div>
-            <div class="time-slot"><span>06:00 AM</span><span>Sunrise Trek 🌄</span></div>
+            <div class="time-slot"><span>06:00 AM</span><span>Sunrise Trek</span></div>
             <div class="time-slot"><span>09:00 AM</span><span>Technical Session</span></div>
             <div class="time-slot"><span>12:30 PM</span><span>Closing & Photos</span></div>
             <div class="time-slot"><span>01:00 PM</span><span>Lunch & Dispersal</span></div>
